Update for Eclipse 4.30